--- a/installer/pom.xml
+++ b/installer/pom.xml
@@ -1,16 +1,14 @@
-<project
-    xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
-    <modelVersion>4.0.0</modelVersion>
+	<modelVersion>4.0.0</modelVersion>
 
     <groupId>org.vivoweb</groupId>
     <artifactId>vivo-installer</artifactId>
     <version>1.10.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
-    <name>VIVO Installer</name>
+	<name>VIVO Installer</name>
 
     <properties>
         <vitro-version>${project.version}</vitro-version>
