--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
       context: ./
       dockerfile: Dockerfile
       args:
-        - VIVO_DIR=/opt/vivo/home
+        - VIVO_DIR=/usr/local/vivo/home
         - TDB_FILE_MODE=direct
         - SOLR_URL=http://solr:8983/solr/vivocore
     environment:
@@ -28,7 +28,7 @@ services:
     ports:
       - 8080:8080
     volumes:
-      - ${LOCAL_VIVO_HOME}:/opt/vivo/home
+      - ${LOCAL_VIVO_HOME}:/usr/local/vivo/home
     networks:
       - vivo
 
