--- a/installer/pom.xml
+++ b/installer/pom.xml
@@ -219,6 +219,21 @@
                 </plugins>
             </build>
         </profile>
+        <profile>
+            <id>deploy</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-deploy-plugin</artifactId>
+                        <version>2.8.2</version>
+                        <configuration>
+                          <skip>true</skip>
+                        </configuration>
+                      </plugin>
+                </plugins>
+            </build>
+        </profile>
     </profiles>
 
     <distributionManagement>
