Add usePreciseSubqueries property to example.runtime.properties

--- a/home/src/main/resources/config/example.runtime.properties
+++ b/home/src/main/resources/config/example.runtime.properties
@@ -110,6 +110,22 @@ selfEditing.idMatchingProperty = http://vivo.mydomain.edu/ns#networkId
   #
 #externalAuth.netIdHeaderName = remote_userID
 
+# -----------------------------------------------------------------------------
+# OPTIMIZING LIST VIEW QUERIES
+# -----------------------------------------------------------------------------
+
+  #
+  # Include sections between <precise-subquery></precise-subquery>
+  # tags when executing 'list view' queries that retrieve data
+  # for property lists on profile pages.
+  #
+  # Including these optional sections does not change the query
+  # semantics, but may improve performance.
+  #
+  # Default is true if not set.
+  # (Prior to v1.12, default was true for SDB and false for TDB.)
+  #
+# listview.usePreciseSubquery = true
 
 # -----------------------------------------------------------------------------
 # TUNING THE DATABASE CONNECTION POOL
@@ -127,7 +143,6 @@ selfEditing.idMatchingProperty = http://vivo.mydomain.edu/ns#networkId
   # of the maximum number of active connections.
   #
 # VitroConnection.DataSource.pool.maxIdle = 10
-
 
 # -----------------------------------------------------------------------------
 # USING A DIFFERENT DATABASE
