Comment out email settings

--- a/home/src/main/resources/config/example.runtime.properties
+++ b/home/src/main/resources/config/example.runtime.properties
@@ -75,8 +75,8 @@ argon2.time = 1000
   #     email.smtpHost = smtp.mydomain.edu
   #     email.replyTo = vivoAdmin@mydomain.edu
   #
-email.smtpHost =
-email.replyTo =
+# email.smtpHost =
+# email.replyTo =
 
   #
   # URL of Solr context used in local VIVO search. This will usually consist of:
