--- a/installer/webapp/pom.xml
+++ b/installer/webapp/pom.xml
@@ -7,13 +7,13 @@
 
     <groupId>org.vivoweb</groupId>
     <artifactId>vivo-installer-vivo</artifactId>
-    <version>1.12.0</version>
+    <version>1.12.0-SNAPSHOT</version>
     <packaging>war</packaging>
 
     <parent>
         <groupId>org.vivoweb</groupId>
         <artifactId>vivo-installer</artifactId>
-        <version>1.12.0</version>
+        <version>1.12.0-SNAPSHOT</version>
         <relativePath>..</relativePath>
     </parent>
 
