--- a/installer/webapp/pom.xml
+++ b/installer/webapp/pom.xml
@@ -127,6 +127,12 @@
             <version>${project.version}</version>
             <type>war</type>
         </dependency>
+        <dependency>
+            <groupId>org.vivoweb</groupId>
+            <artifactId>vivo-languages-webapp-core</artifactId>
+            <version>${project.version}</version>
+            <type>war</type>
+        </dependency>
 
         <dependency>
             <groupId>javax.servlet</groupId>
