--- a/installer/webapp/pom.xml
+++ b/installer/webapp/pom.xml
@@ -8,7 +8,7 @@
     <groupId>org.vivoweb</groupId>
     <artifactId>vivo-installer-vivo</artifactId>
     <version>1.12.1-SNAPSHOT</version>
-    <packaging>war</packaging>
+    <packaging>pom</packaging>
 
     <parent>
         <groupId>org.vivoweb</groupId>
