--- a/installer/webapp/pom.xml
+++ b/installer/webapp/pom.xml
@@ -2,14 +2,11 @@
     xmlns="http://maven.apache.org/POM/4.0.0"
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-
     <modelVersion>4.0.0</modelVersion>
-
     <groupId>org.vivoweb</groupId>
     <artifactId>vivo-installer-vivo</artifactId>
     <version>1.12.1-SNAPSHOT</version>
-    <packaging>pom</packaging>
-
+    <packaging>war</packaging>
     <parent>
         <groupId>org.vivoweb</groupId>
         <artifactId>vivo-installer</artifactId>
@@ -122,7 +119,6 @@
     </profiles>
 
     <build>
-        <finalName>${app-name}</finalName>
         <plugins>
             <plugin>
                 <artifactId>maven-install-plugin</artifactId>
@@ -154,19 +150,18 @@
             <type>war</type>
         </dependency>
         <!-- Dependencies for multilingual support -->
-        <dependency>
+        <!-- dependency>
             <groupId>org.vivoweb</groupId>
-            <artifactId>vitro-languages-webapp-core</artifactId>
-            <version>${project.version}</version>
+            <artifactId>vitro-languages-webapp</artifactId>
+            <version>[2.0.0,2.1.0)</version>
             <type>war</type>
         </dependency>
         <dependency>
             <groupId>org.vivoweb</groupId>
-            <artifactId>vivo-languages-webapp-core</artifactId>
-            <version>${project.version}</version>
+            <artifactId>vivo-languages-webapp</artifactId>
+            <version>[2.0.0,2.1.0)</version>
             <type>war</type>
-        </dependency>
-
+        </dependency -->
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>servlet-api</artifactId>
