--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -7,13 +7,13 @@
 
     <groupId>org.vivoweb</groupId>
     <artifactId>vivo-webapp</artifactId>
-    <version>1.12.1</version>
+    <version>1.12.2-SNAPSHOT</version>
     <packaging>war</packaging>
 
     <parent>
         <groupId>org.vivoweb</groupId>
         <artifactId>vivo-project</artifactId>
-        <version>1.12.1</version>
+        <version>1.12.2-SNAPSHOT</version>
         <relativePath>..</relativePath>
     </parent>
 
@@ -69,7 +69,7 @@
         <dependency>
             <groupId>org.vivoweb</groupId>
             <artifactId>vivo-api</artifactId>
-            <version>1.12.1</version>
+            <version>1.12.2-SNAPSHOT</version>
         </dependency>
     </dependencies>
 </project>
